seperated css files; added whywediff pics; added contentone and contenttwo to sec3;

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/clientss.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/faq.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/form.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/ourprocess.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/startdesignbut.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/whywediff.css">
     <!-- Riteous Font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
 </head>
@@ -41,7 +51,6 @@
             <div class="col-lg-7">
                 <h1>Create designs easy<br> and effortlessly.</h1>
                 <p>The Graphic Jar is here to help create your one of kind design project.</p>
-                <p>We spent many hours creating a system that ensures the visions that you have </p>
                 <div id="sec1But">
                 </div>
             </div>
@@ -56,52 +65,95 @@
             <h2>Why Are We Different?</h2>
             <div class="row">
                 <div class="col-lg-4">
-                    <h3>Fresh Designs</h3>
+                    <h3>Innovative Designs</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <img src="assets/svg/up_arrow.svg">
+                    <img src="assets/svg/lightbulb.svg">
                 </div>
                 <div class="col-lg-4">
-                    <h3>Premium And Efficient</h3>
+                    <h3>Custom Design Survey</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <img src="assets/svg/up_arrow.svg">
+                    <img src="assets/svg/form.svg">
                 </div>
                 <div class="col-lg-4">
                     <h3>Around The Clock Care</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <img src="assets/svg/up_arrow.svg">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> 
+                    <img src="assets/svg/clock.svg">
                 </div>
             </div>
         </div>
     </section>
     <!-- 3 step process -->
     <section id="sec3">
-        <h2>Designs made easy!</h2>
-        <!-- <div class="container"> -->
         <div class="row">
             <div class="col-lg-1"></div>
             <div class="col-lg-6">
-                <div class="row" id="vbtop">
-                    <div class="row">
-                        <div id="red" class="vbcircles"></div>
-                        <div id="yellow" class="vbcircles"></div>
-                        <div id="green" class="vbcircles"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg">
-                            <div id="vbarrows">< ></div>
+                <div id="vbbrowserbg">
+                    <div class="row" id="vbtop">
+                        <div class="row">
+                            <div id="red" class="vbcircles"></div>
+                            <div id="yellow" class="vbcircles"></div>
+                            <div id="green" class="vbcircles"></div>
                         </div>
-                        <div class="col-lg">
-                            <div id="vbsearchbar"></div>
+                        <div class="row">
+                            <div class="col-lg">
+                                <div id="vbarrows">
+                                    <div id="leftarrow"></div>
+                                    <div id="rightarrow"></div>
+                                </div>
+                            </div>
+                            <div class="col-lg">
+                                <div id="vbsearchbar">
+                                    <div id="magglass"></div>
+                                    www.thegraphicjar.com
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="row" id="vbbottom">
-                    <div id="vbcontent"></div>
+                    <div class="row" id="vbbottom">
+                        <div id="vbcontent">
+                            <div id="contentone">
+                                <div class="row">
+                                    <div class="col-lg">
+                                        <div class="projects">
+                                            <div>www</div>
+                                            Web Design
+                                        </div>
+                                    </div>
+                                    <div class="col-lg">
+                                        <div class="projects">
+                                            <img src="assets/svg/tgj_logo.svg">
+                                            <div>Logo Design</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg">
+                                        <div class="projects">
+                                            <div></div>
+                                            Business Cards
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>Start Project</div>
+                            </div>
+                            <div id="contenttwo" class="showprocess">
+                                <div class="shortbar"></div>
+                                <div class="longbar"></div>
+                                <div class="shortbar"></div>
+                                <div class="longbar"></div>
+                                <div class="shortbar"></div>
+                                <div class="longbar"></div>
+                                <div class="shortbar"></div>
+                                <div class="longbar"></div>
+                            </div>
+                            <div id="contentthree" class="showprocess">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <button id="prev"><img src="assets/svg/prev_arrow.svg"></button>
             <div class="col-lg-3">
                 <div id="diffsteps">
+                    <h2>Designs made easy!</h2>
                     <h3 id="stepstitle"></h3>
                     <p id="stepsdesc"></p>
                     <br>
@@ -112,7 +164,6 @@
             </div>
             <button id="next"><img src="assets/svg/next_arrow.svg"></button>
         </div>
-        <!-- </div> -->
     </section>
     <!-- FAQ -->
     <section id="sec4">
