--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-lg-7">
                 <h1>Create designs easy<br> and effortlessly.</h1>
-                <p>The Graphic Jar is here to help create your one of kind design project.</p>
+                <p>The Graphic Jar is here to create your one of kind design project.</p>
                 <div id="sec1But">
                 </div>
             </div>
@@ -65,18 +65,18 @@
             <h2>Why Are We Different?</h2>
             <div class="row">
                 <div class="col-lg-4">
-                    <h3>Innovative Designs</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h3>Branding Is Our Niche</h3>
+                    <p>Want to make your company stand out?<br> We are filled with new ideas and are itching to create something special for you.</p>
                     <img src="assets/svg/lightbulb.svg">
                 </div>
                 <div class="col-lg-4">
                     <h3>Custom Design Survey</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>We have created a one of kind survey<br> that is effortless for you and detailed for us.<br>Why make simple complicated?</p>
                     <img src="assets/svg/form.svg">
                 </div>
                 <div class="col-lg-4">
-                    <h3>Around The Clock Care</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> 
+                    <h3>Around The Clock Service</h3>
+                    <p>Customer first is our motto.<br> We pride ourselves on our turn around<br>time as well as our quality of work.</p>
                     <img src="assets/svg/clock.svg">
                 </div>
             </div>
@@ -132,7 +132,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div>Start Project</div>
+                                <div id="vbstart">Start Project</div>
                             </div>
                             <div id="contenttwo" class="showprocess">
                                 <div class="shortbar"></div>
@@ -145,6 +145,8 @@
                                 <div class="longbar"></div>
                             </div>
                             <div id="contentthree" class="showprocess">
+                                <p>Thank you</p>
+                                <p>for choosing the graphic jar</p>
                             </div>
                         </div>
                     </div>
@@ -167,17 +169,26 @@
     </section>
     <!-- FAQ -->
     <section id="sec4">
+
         <div id="faq" class="container">
+            <h2>FAQ</h2>
             <div class="accordion" id="accordionExample">
                 <div class="card">
                     <h5 class="mb-0">
         <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">
-          Collapsible Group Item #1
+          What forms of payment do we take?
         </button>
       </h5>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                         <div class="card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div class="container">
+                                <p>Let us know if you have another form of payment that you prefer, we'll add it to the list!</p>
+                                <img src="assets/svg/cash.svg">
+                                <img src="assets/svg/check.svg">
+                                <img src="assets/images/paypal.png">
+                                <img src="assets/svg/venmo.svg">
+                                <img src="assets/svg/squarecash.svg">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -221,11 +232,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-4">
-                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
+                                <img class="d-block w-100" src="assets/images/carousel4.png" alt="First slide">
                             </div>
                             <div class="col-lg-7 my-auto ml-0">
-                                <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
-                                <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
+                                <p class="clients">Tell Their Stories</p>
+                                <p class="comment">"Tell their Stories is a multi-media project that aims to give a voice to individuals who have been affected by mass incarceration. Whether they are currently incarcerated or are beginning the process of re-entering the community, their stories deserve to be told."</p>
+                                <p>- Marie-Pier Frigon, Founder<button><a href="https://www.telltheirstoriesproject.com/" target="_blank">Website</a></button></p>
                             </div>
                         </div>
                     </div>
@@ -234,11 +246,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-4">
-                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
+                                <img class="d-block w-100" src="assets/images/carousel5.png" alt="First slide">
                             </div>
                             <div class="col-lg-7 my-auto ml-0">
-                                <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
-                                <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
+                                <p class="clients">Gusto di Roma</p>
+                                <p class="comment">"Eating authentic Italian food at home can be simple. I personally select a variety of ready-to-eat small bites and mail flavors of Italy to you once a month."</p>
+                                <p>- Matthew De Bellis, Founder</p>
                             </div>
                         </div>
                     </div>
@@ -247,10 +260,10 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-4">
-                                <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
+                                <img class="d-block w-100" src="assets/images/carousel2.png" alt="First slide">
                             </div>
                             <div class="col-lg-7 my-auto ml-0">
-                                <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
+                                <p class="clients">The Forest Floor</p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
                         </div>
@@ -270,9 +283,9 @@
     <footer class="footer">
     </footer>
     <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/javascript.js"></script>
 </body>
