--- a/form.html
+++ b/form.html
@@ -7,7 +7,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- External CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/startdesignbut.css.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/form.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <!-- Riteous Font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
 </head>
@@ -35,62 +39,36 @@
     <!-- tgj design form -->
     <section id="form">
         <div class="container">
-            <div id="box">
-                <div id="designstartbutton">
-                    <h4>Intro Text</h4>
-                    <button id="startdesign">Start</button>
+            <div class="row">
+                <div class="col-lg">
+                    <div>
+                        <div id="webdesign" class="projects">Web Design</div>
+                        <div id="webdesigndesc">
+                            Start your next web project with us!
+                            <div>
+                                <button>Choose Project</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div id="chooseproject">
-                    <div class="accordion" id="accordionExample">
-                        <div class="card">
-                            <h5 class="mb-0">
-                    <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">Logo</button></h5>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-lg-7">
-                                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <img src="assets/svg/trial.svg">
-                                            <button>Choose Project</button>
-                                        </div>
-                                    </div>
-                                </div>
+                <div class="col-lg">
+                    <div>
+                        <div id="logo" class="projects">Logo Design</div>
+                        <div id="logodesc">
+                            Start your next web project with us!
+                            <div>
+                                <button>Choose Project</button>
                             </div>
                         </div>
-                        <div class="card">
-                            <h5 class="mb-0">
-                    <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Illustration</button></h5>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-lg-7">
-                                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <img src="assets/svg/trial.svg">
-                                            <button>Choose Project</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <h5 class="mb-0">
-                    <button class="btn btn-link card-header collapsed" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Website Design</button></h5>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-lg-7">
-                                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <img src="assets/svg/trial.svg">
-                                            <button>Choose Project</button>
-                                        </div>
-                                    </div>
-                                </div>
+                    </div>
+                </div>
+                <div class="col-lg mx-auto">
+                    <div>
+                        <div id="businesscard" class="projects">Business Cards</div>
+                        <div id="carddesc">
+                            Start your next web project with us!
+                            <div>
+                                <button>Choose Project</button>
                             </div>
                         </div>
                     </div>
@@ -100,16 +78,12 @@
     </section>
     <!-- footer -->
     <footer class="footer">
-        <div id="contact">
-            <h3>Send Us An Email</h3>
-            <form>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Your Message" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+        <div id="links">
+            <img src="assets/svg/tgj_logo.svg">
+            <div><a href="about.html">About Us</a></div>
+            <div><a href="terms.html">Terms and Agreement</a></div>
+            <div><a href="faq2.html">More FAQ</a></div>
+            <div><a href="contact.html">Contact Us</a></div>
         </div>
     </footer>
     <!-- Bootstrap JS -->
