--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/contact.css">
     <link rel="stylesheet" type="text/css" href="assets/css/faq.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/form.css">
     <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
     <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="assets/css/ourprocess.css">
@@ -66,17 +65,22 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h3>Branding Is Our Niche</h3>
-                    <p>Want to make your company stand out?<br> We are filled with new ideas and are itching to create something special for you.</p>
+                    <p>Want to make your company stand out?
+                        <br> We are filled with new ideas and are itching to create something special for you.</p>
                     <img src="assets/svg/lightbulb.svg">
                 </div>
                 <div class="col-lg-4">
                     <h3>Custom Design Survey</h3>
-                    <p>We have created a one of kind survey<br> that is effortless for you and detailed for us.<br>Why make simple complicated?</p>
+                    <p>We have created a one of kind survey
+                        <br> that is effortless for you and detailed for us.
+                        <br>Why make simple complicated?</p>
                     <img src="assets/svg/form.svg">
                 </div>
                 <div class="col-lg-4">
                     <h3>Around The Clock Service</h3>
-                    <p>Customer first is our motto.<br> We pride ourselves on our turn around<br>time as well as our quality of work.</p>
+                    <p>Customer first is our motto.
+                        <br> We pride ourselves on our turn around
+                        <br>time as well as our quality of work.</p>
                     <img src="assets/svg/clock.svg">
                 </div>
             </div>
@@ -111,7 +115,7 @@
                     </div>
                     <div class="row" id="vbbottom">
                         <div id="vbcontent">
-                            <div id="contentone">
+                            <div id="contentone" class="showprocess">
                                 <div class="row">
                                     <div class="col-lg">
                                         <div class="projects">
@@ -134,7 +138,7 @@
                                 </div>
                                 <div id="vbstart">Start Project</div>
                             </div>
-                            <div id="contenttwo" class="showprocess">
+                            <div id="contenttwo">
                                 <div class="shortbar"></div>
                                 <div class="longbar"></div>
                                 <div class="shortbar"></div>
@@ -144,7 +148,7 @@
                                 <div class="shortbar"></div>
                                 <div class="longbar"></div>
                             </div>
-                            <div id="contentthree" class="showprocess">
+                            <div id="contentthree">
                                 <p>Thank you</p>
                                 <p>for choosing the graphic jar</p>
                             </div>
@@ -169,7 +173,6 @@
     </section>
     <!-- FAQ -->
     <section id="sec4">
-
         <div id="faq" class="container">
             <h2>FAQ</h2>
             <div class="accordion" id="accordionExample">
@@ -237,7 +240,9 @@
                             <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">Tell Their Stories</p>
                                 <p class="comment">"Tell their Stories is a multi-media project that aims to give a voice to individuals who have been affected by mass incarceration. Whether they are currently incarcerated or are beginning the process of re-entering the community, their stories deserve to be told."</p>
-                                <p>- Marie-Pier Frigon, Founder<button><a href="https://www.telltheirstoriesproject.com/" target="_blank">Website</a></button></p>
+                                <p>- Marie-Pier Frigon, Founder
+                                    <button><a href="https://www.telltheirstoriesproject.com/" target="_blank">Website</a></button>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -281,6 +286,13 @@
         </div>
     </section>
     <footer class="footer">
+        <div id="links">
+            <img src="assets/svg/tgj_logo.svg">
+            <div><a href="about.html">About Us</a></div>
+            <div><a href="terms.html">Terms and Agreement</a></div>
+            <div><a href="faq2.html">More FAQ</a></div>
+            <div><a href="contact.html">Contact Us</a></div>
+        </div>
     </footer>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
