--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/clientss.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/contact.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/contact.css"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/faq.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
@@ -99,17 +99,13 @@
                             <div id="green" class="vbcircles"></div>
                         </div>
                         <div class="row">
-                            <div class="col-lg">
-                                <div id="vbarrows">
-                                    <div id="leftarrow"></div>
-                                    <div id="rightarrow"></div>
-                                </div>
+                            <div id="vbarrows">
+                                <div id="leftarrow"></div>
+                                <div id="rightarrow"></div>
                             </div>
-                            <div class="col-lg">
-                                <div id="vbsearchbar">
-                                    <div id="magglass"></div>
-                                    www.thegraphicjar.com
-                                </div>
+                            <div id="vbsearchbar">
+                                <div id="magglass"></div>
+                                www.thegraphicjar.com
                             </div>
                         </div>
                     </div>
@@ -198,12 +194,16 @@
                 <div class="card">
                     <h5 class="mb-0">
         <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Collapsible Group Item #2
+          What is our payment schedule?
         </button>
       </h5>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div class="row">
+                                <div>Initial Deposit<br>25%</div>
+                                <div>Initial Deposit<br>25%</div>
+                                <div>Initial Deposit<br>25%</div>
+                            </div>
                         </div>
                     </div>
                 </div>
